--- a/IEMP_Satellite/IEMP_Satellite/lang/en-us.lang
+++ b/IEMP_Satellite/IEMP_Satellite/lang/en-us.lang
@@ -57,3 +57,13 @@ StartSeeding=Start Seeding
 StopSeeding=Stop Seeding
 Check=Check
 StartChecking=Start Checking
+AutoCreateTorrent=Automatically create torrent file
+Confirm=Confirm
+LoginTitle=IEMP Login
+Username=Username
+Password=Password
+Login=Login
+ForgetPassword=Forget Password
+UsernameOrPasswordMustNotBeEmpty=Username or password must not be empty!
+UsernameOrPasswordError=Username or password error!
+LogOut=LogOut
